Make single page headers full width

--- a/wp-content/themes/workingnyc/views/jobs/single.twig
+++ b/wp-content/themes/workingnyc/views/jobs/single.twig
@@ -26,7 +26,7 @@
     {# Header Section #}
     <div class="layout-content">
       <header class="o-header">
-        <div>
+        <div class="w-full">
           <h1 class="o-header__title">{{ post.title }}</h1>
 
           <h2 class="o-header__subtitle">
