--- a/wp-content/themes/workingnyc/views/jobs/single.twig
+++ b/wp-content/themes/workingnyc/views/jobs/single.twig
@@ -50,7 +50,7 @@
 
           {% if post.schedule %}<p class="small flex items-center">
             <svg class="icon-wnyc-ui icon-2 flex-shrink-0 mie-1" role="img">
-              <title>{{ __('Schedule', 'WNYC') }}</title>
+              <title>{{ __('Employment Type and Schedule', 'WNYC') }}</title>
 
               <use href="#feather-calendar"></use>
             </svg>
@@ -70,7 +70,7 @@
 
           {% if post.location %}<p class="small flex items-center">
             <svg class="icon-wnyc-ui icon-2 flex-shrink-0 mie-1" role="img">
-              <title>{{ __('Location', 'WNYC') }}</title>
+              <title>{{ __('Work Location', 'WNYC') }}</title>
 
               <use href="#feather-map-pin"></use>
             </svg>
