--- a/wp-content/themes/workingnyc/views/programs/single.twig
+++ b/wp-content/themes/workingnyc/views/programs/single.twig
@@ -58,7 +58,7 @@
           <p class="small flex items-center">
             <a class="link-anchor inline-flex flex-shrink-0 mie-1" href="#more-information">
               <svg class="icon-wnyc-ui icon-2" role="img">
-                <title>{{ __('Services', 'WNYC') }}</title>
+                <title>{{ __('Services Provided', 'WNYC') }}</title>
 
                 <use href="#feather-award"></use>
               </svg>
@@ -197,13 +197,13 @@
             <h3 class="h5 flex items-center mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
               <a class="link-anchor flex flex-shrink-0 mie-1" href="#schedule">
                 <svg class="icon-wnyc-ui" role="img">
-                  <title>{{ __('Schedule', 'WNYC') }}</title>
+                  <title>{{ __('Duration and Length', 'WNYC') }}</title>
 
                   <use href="#feather-calendar"></use>
                 </svg>
               </a>
 
-              {{ __('Schedule', 'WNYC') }}
+              {{ __('Duration and Length', 'WNYC') }}
             </h3>
           </div>
 
