--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -1,7 +1,7 @@
-<footer aria-label="Primary Footer" class="o-footer relative z-10 pb-3 bg-scale-1 tablet:bg-scale-2" role="contentinfo">
+<footer aria-label="{{ __('Footer', 'WNYC') }}" class="o-footer relative z-10 pb-3 bg-scale-1 tablet:bg-scale-2" role="contentinfo">
   <div class="page-max">
     <div class="o-attribution">
-      <nav aria-label="Footer Primary Navigation" class="nav-block tablet:nav-inline tablet:flex items-center">
+      <nav aria-label="{{ footer_menu.name }}" class="nav-block tablet:nav-inline tablet:flex items-center">
         <a class="uppercase text-small no-underline tablet:inline-flex tablet:p-0" href="{{ fn('get_home_url') }}">
           <span class="sr-only">Working N Y C</span>
 
@@ -46,7 +46,7 @@
             {{ __('NYC is a trademark and service mark of the City of New York.', 'WNYC') }}</p>
         </div>
 
-        <nav class="nav-block tablet:nav-inline tablet:flex items-center" aria-label="Footer Tertiary Navigation">
+        <nav class="nav-block tablet:nav-inline tablet:flex items-center" aria-label="{{ footer_menu_tertiary.name }}">
           {% for m in footer_menu_tertiary.get_items %}
           <a class="o-footer__item" href="{{ m.link }}"
             {% if m.attr_title %}title="{{ m.attr_title }}"{% else %}title="{{ m.title }}"{% endif %}
