--- a/wp-content/themes/workingnyc/views/objects/menu.twig
+++ b/wp-content/themes/workingnyc/views/objects/menu.twig
@@ -4,11 +4,11 @@
       <use data-js-themes="icon" href="#feather-sun"></use>
     </svg>
 
-    <span data-js-themes="label">{{ __('Theme', 'WNYC') }}</span>
+    <span class="sr-only">Toggle&nbsp;</span><span data-js-themes="label">{{ __('Theme', 'WNYC') }}</span>
   </button>
 
   <div class="mb-auto">
-    <button class="o-menu__nav-item flex items-center" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="close" tabindex="-1">
+    <button class="o-menu__nav-item flex items-center" aria-controls="aria-c-menu" data-js="menu" data-js-menu="close" tabindex="-1">
       <svg aria-hidden="true" class="icon-wnyc-ui" tabindex="-1">
         <use href="#feather-x"></use>
       </svg>
