--- a/wp-content/themes/workingnyc/views/search.twig
+++ b/wp-content/themes/workingnyc/views/search.twig
@@ -9,7 +9,7 @@
 {% block hero %}
 <header class="c-hero u-lg-gutter">
   <div class="o-container-med">
-    <h1 class="show-for-screen-reader">Search Results</h1>
+    <h1 class="show-for-screen-reader">{{__('Search Results', 'WNYC')}}</h1>
   </div>
 </header>
 {% endblock %}
