--- a/wp-content/themes/workingnyc/views/partials/search-overlay.twig
+++ b/wp-content/themes/workingnyc/views/partials/search-overlay.twig
@@ -1,13 +1,9 @@
-<section aria-hidden="true" class="o-overlay js-overlay animated" id="overlay-search">
-
-  <div class="o-container-med">
-
-    <div class="u-bottom-spacing">
-      {% include 'partials/search-form.twig' %}
-    </div>
-  </div> 
-  <div class="u-top-spacing-small text-center">
-		<button href="#search" data-toggle="overlay-search" data-toggle-class="fadeInDown" class="show-for-keyboard o-navigation__nav-link keybord_search_close">{{__('Close Search', 'WNYC')}}</button>
-	</div>
-
-</section>
+<div class="o-search absolute z-10 hidden" aria-hidden="false" class="active" id="aria-c-search">
+  <button class="o-search__close float-right" data-js="search" tabindex="-1" aria-controls="aria-c-search" data-dialog="close" aria-expanded="true">
+    <svg class="icon-ui">
+      <title>{{__('Close search', 'WNYC')}}</title>
+      <use href="#lucide-x"></use>
+    </svg>
+  </button>
+  {% include 'partials/search-form.twig' %}
+</div>
