--- a/wp-content/themes/workingnyc/views/partials/search-form.twig
+++ b/wp-content/themes/workingnyc/views/partials/search-form.twig
@@ -1,7 +1,7 @@
 <form class="o-search__form" action="/">
-    <label class="label">Search for work and services</label>
-    <div class="input o-search__input">
-        <input data-js="search__input" tabindex="-1" inputmode="search" name="s" placeholder="Search" value="{{ s }}"></input>
+    <label class="label pb-1">{{__('Search for work or services', 'WNYC')}}</label>
+    <div class="input o-search__input rounded">
+        <input class="rounded" data-js="search__input" tabindex="-1" inputmode="search" name="s" placeholder="Search" value="{{ s }}"></input>
         <button type="submit" tabindex="-1" class="o-search__submit">
             <svg class="icon-ui">
                 <title>{{__('Submit', 'WNYC')}}</title>
