--- a/wp-content/themes/workingnyc/views/partials/search-overlay.twig
+++ b/wp-content/themes/workingnyc/views/partials/search-overlay.twig
@@ -1,9 +1,11 @@
-<div class="o-search absolute z-10 hidden" aria-hidden="false" class="active" id="aria-c-search">
+<div class="o-search bg-scale-4 absolute z-10 hidden" aria-hidden="false" class="active" id="aria-c-search">
   <button class="o-search__close float-right" data-js="search" tabindex="-1" aria-controls="aria-c-search" data-dialog="close" aria-expanded="true">
     <svg class="icon-ui">
       <title>{{__('Close search', 'WNYC')}}</title>
       <use href="#lucide-x"></use>
     </svg>
   </button>
-  {% include 'partials/search-form.twig' %}
+  <div class="py-2 tablet:py-8 desktop:px-6">
+    {% include 'partials/search-form.twig' %}
+  </div>
 </div>
