style search bar desktop

--- a/wp-content/themes/workingnyc/views/partials/search-overlay.twig
+++ b/wp-content/themes/workingnyc/views/partials/search-overlay.twig
@@ -5,7 +5,7 @@
       <use href="#lucide-x"></use>
     </svg>
   </button>
-  <div class="py-2 tablet:py-8 desktop:px-6">
+  <div class="py-2 tablet:py-8 justify-center flex">
     {% include 'partials/search-form.twig' %}
   </div>
 </div>
