center search bar

--- a/wp-content/themes/workingnyc/views/partials/search-overlay.twig
+++ b/wp-content/themes/workingnyc/views/partials/search-overlay.twig
@@ -5,7 +5,9 @@
       <use href="#lucide-x"></use>
     </svg>
   </button>
-  <div class="py-2 tablet:py-8 justify-center flex">
-    {% include 'partials/search-form.twig' %}
+  <div class="py-2 tablet:py-8">
+    <div class="justify-center flex">
+      {% include 'partials/search-form.twig' %}
+    </div>
   </div>
 </div>
